--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -1,18 +1,24 @@
 "Bazel dependencies"
 
 module(
-    name = "rules_debian_packages",
+    name = "rules_apt",
     version = "0.0.0",
-    compatibility_level = 1,
+    compatibility_level = 0,
 )
 
 bazel_dep(name = "bazel_skylib", version = "1.4.1")
 bazel_dep(name = "platforms", version = "0.0.5")
+bazel_dep(name = "rules_python", version = "0.31.0")
 
 bazel_dep(name = "gazelle", version = "0.29.0", dev_dependency = True, repo_name = "bazel_gazelle")
 bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.4.1", dev_dependency = True)
 bazel_dep(name = "aspect_bazel_lib", version = "1.32.1", dev_dependency = True)
 bazel_dep(name = "buildifier_prebuilt", version = "6.1.2", dev_dependency = True)
-bazel_dep(name = "rules_python", version = "0.26.0", dev_dependency = True)
-bazel_dep(name = "rules_oci", version = "1.4.0", dev_dependency = True)
-bazel_dep(name = "rules_pkg", version = "0.9.1", dev_dependency = True)
+
+pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
+pip.parse(
+    hub_name = "rules_apt_pip",
+    python_version = "3.11",
+    requirements_lock = "//apt/private/third_party:requirements.txt",
+)
+use_repo(pip, "rules_apt_pip")
