--- a/examples/rules_oci/WORKSPACE.bazel
+++ b/examples/rules_oci/WORKSPACE.bazel
@@ -1,81 +1,1 @@
-workspace(name = "rules_debian_packages_rules_oci_example")
-
-load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
-
-# ===== setup rules_python =====
-http_archive(
-    name = "rules_python",
-    sha256 = "e85ae30de33625a63eca7fc40a94fea845e641888e52f32b6beea91e8b1b2793",
-    strip_prefix = "rules_python-0.27.1",
-    url = "https://github.com/bazelbuild/rules_python/releases/download/0.27.1/rules_python-0.27.1.tar.gz",
-)
-
-load("@rules_python//python:repositories.bzl", "py_repositories", "python_register_toolchains")
-
-py_repositories()
-
-python_register_toolchains(
-    name = "python",
-    python_version = "3.10",
-)
-
-load("@python//:defs.bzl", python_interpreter = "interpreter")
-
-# ===== setup rules_oci =====
-http_archive(
-    name = "rules_oci",
-    sha256 = "d41d0ba7855f029ad0e5ee35025f882cbe45b0d5d570842c52704f7a47ba8668",
-    strip_prefix = "rules_oci-1.4.3",
-    url = "https://github.com/bazel-contrib/rules_oci/releases/download/v1.4.3/rules_oci-v1.4.3.tar.gz",
-)
-
-load("@rules_oci//oci:dependencies.bzl", "rules_oci_dependencies")
-
-rules_oci_dependencies()
-
-load("@rules_oci//oci:repositories.bzl", "LATEST_CRANE_VERSION", "oci_register_toolchains")
-
-oci_register_toolchains(
-    name = "oci",
-    crane_version = LATEST_CRANE_VERSION,
-    # Uncommenting the zot toolchain will cause it to be used instead of crane for some tasks.
-    # Note that it does not support docker-format images.
-    # zot_version = LATEST_ZOT_VERSION,
-)
-
-# ===== setup rules_pkg =====
-http_archive(
-    name = "rules_pkg",
-    sha256 = "8f9ee2dc10c1ae514ee599a8b42ed99fa262b757058f65ad3c384289ff70c4b8",
-    urls = [
-        "https://mirror.bazel.build/github.com/bazelbuild/rules_pkg/releases/download/0.9.1/rules_pkg-0.9.1.tar.gz",
-        "https://github.com/bazelbuild/rules_pkg/releases/download/0.9.1/rules_pkg-0.9.1.tar.gz",
-    ],
-)
-
-load("@rules_pkg//:deps.bzl", "rules_pkg_dependencies")
-
-rules_pkg_dependencies()
-
-# ===== setup rules_debian_packages =====
-local_repository(
-    name = "rules_debian_packages",
-    path = "../..",
-)
-
-load("@rules_debian_packages//debian_packages:repositories.bzl", "rules_debian_packages_dependencies")
-
-rules_debian_packages_dependencies(python_interpreter_target = python_interpreter)
-
-load("@rules_debian_packages//debian_packages:defs.bzl", "debian_packages_repository")
-
-debian_packages_repository(
-    name = "debian_packages",
-    default_arch = "amd64",
-    default_distro = "debian12",
-    lock_file = "//:packages.lock",
-)
-
-load("@debian_packages//:packages.bzl", debian_packages_install_deps = "install_deps")
-
-debian_packages_install_deps()
+# Empty file to declare this folder as a Bazel workspace.
