--- a/examples/rules_oci/packages.yaml
+++ b/examples/rules_oci/packages.yaml
@@ -1,5 +1,5 @@
 - distros: ["debian12"]
-  archs: ["amd64"]
+  architectures: ["amd64"]
   packages:
     # required to replicate distroless/static
     - base-files
