--- a/apt/BUILD.bazel
+++ b/apt/BUILD.bazel
@@ -1,7 +1,10 @@
 load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
 
 # For stardoc to reference the files
-exports_files(["defs.bzl"])
+exports_files([
+    "defs.bzl",
+    "extensions.bzl",
+])
 
 bzl_library(
     name = "defs",
