CI: Exclude all non-Bzlmod tests

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,3 +24,7 @@ jobs:
           ".",
           "e2e/smoke"
         ]
+      exclude: |
+        [
+          {"bzlmodEnabled": false},
+        ]
