CI: Don't run the smoke test on non-Linux

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,4 +27,6 @@ jobs:
       exclude: |
         [
           {"bzlmodEnabled": false},
+          {"folder": "e2e/smoke", "os": "macos-latest"},
+          {"folder": "e2e/smoke", "os": "windows-latest"},
         ]
