--- a/e2e/smoke/ubuntu-snapshots.yaml
+++ b/e2e/smoke/ubuntu-snapshots.yaml
@@ -1,2 +1,3 @@
-main: 20240223T000000Z
-security: 20240223T000000Z
+ubuntu-jammy-main: 20240503T000000Z
+ubuntu-jammy-security: 20240503T000000Z
+ubuntu-jammy-updates: 20240503T000000Z
